[package]
name = "memo"
version = "1.0.0"
readme = "README.md"
repository = "https://github.com/TheJeme/memo"
license = "MIT"
keywords = ["tasks", "notes", "memo"]
categories = ["filesystem"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs-next = "2.0.0"
